# factory

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PROVENANCE.md  README.md  core_purity_baseline.json  core_purity_denylist.json  pyproject.toml
.kin/: knowledge.jsonl
docs/: AGENT-DIRECTIVES.md  DOCTRINE-KERNEL.md  ORCHESTRATION-BOUNDARY.md  PROVENANCE-SYNC.md  SOFTWARE-FACTORY.md  VALIDATION-DIRECTIVE.md
docs/practices/: change-surface-audit.md  diff-intent-gate.md  frontend-architecture.md  reliability-as-signal.md
factory_core/: __init__.py  adapters.py  completeness.py  comprehensiveness.py  contract.py  invariant_kernel.py  manifest.py  promotion.py  registry.py  roles.py  target.py
factory_core/schemas/: capability_delta.schema.json  target_manifest.schema.json
scripts/: check_core_purity.py
tests/: conftest.py  test_adapters.py  test_capability_delta_schema.py  test_check_core_purity.py  test_comprehensiveness_gate.py  test_contract_coverage.py  test_invariant_kernel.py  test_manifest_ledger.py  test_portability.py  test_promotion_gate.py  test_registry.py  test_roles.py  test_target_loader.py
tests/fixtures/contract/: caller_edges.json  excuse_rules.json  inventory_not_ready.json  inventory_ready.json  provider_operations.json
tests/fixtures/invariant_kernel/: delta_a.json  delta_b.json  delta_direct_violation.json  kernel.json  ledger_satisfied.json
tests/fixtures/synthetic_target/: target.toml
tests/fixtures/synthetic_target/.kin/: knowledge.jsonl
tests/fixtures/synthetic_target/compliance/: rules.json
